--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: My website
+title: 飛ばせ☆哈☆熙☆佑
 subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
 ---
