--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 哈☆熙☆佑程式筆記
+title: Code Note
 subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
 ---
