--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Code Note
-subtitle: This is where I will tell my friends way too much about me
+title: Japan Travel Note
+subtitle: This is what I do when I go to Japan
 use-site-title: true
 ---
 
