--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Japan Travel Note
-subtitle: This is what I do when I go to Japan
+title: Program  Note
+subtitle: This is what I log when I write code
 use-site-title: true
 ---
 
